--- a/slick/slick.less
+++ b/slick/slick.less
@@ -1,112 +1,100 @@
 /* Slider */
-.slick-slider
-{
-    position: relative;
 
+.slick-slider {
+    position: relative;
     display: block;
     box-sizing: border-box;
-
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-
     -webkit-touch-callout: none;
+    -webkit-user-select: none;
     -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     -ms-touch-action: pan-y;
-        touch-action: pan-y;
+    touch-action: pan-y;
     -webkit-tap-highlight-color: transparent;
 }
-
 .slick-list {
     position: relative;
-    display: block;
     overflow: hidden;
+    display: block;
     margin: 0;
     padding: 0;
-}
 
-    .slick-list:focus {
+    &:focus {
         outline: none;
     }
 
-    .slick-list.dragging {
+    &.dragging {
         cursor: pointer;
         cursor: hand;
     }
-
-    .slick-slider .slick-track,
-    .slick-slider .slick-list {
-        -webkit-transform: translate3d(0, 0, 0);
-        -moz-transform: translate3d(0, 0, 0);
-            -ms-transform: translate3d(0, 0, 0);
-            -o-transform: translate3d(0, 0, 0);
-                transform: translate3d(0, 0, 0);
-    }
+}
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
 
 .slick-track {
     position: relative;
-    top: 0;
     left: 0;
-
+    top: 0;
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
 
-    .slick-track:before,
-    .slick-track:after {
+    &:before,
+    &:after {
+        content: "";
         display: table;
-        content: '';
     }
 
-    .slick-track:after {
+    &:after {
         clear: both;
     }
-    .slick-loading .slick-track {
+
+    .slick-loading & {
         visibility: hidden;
     }
-
-
+}
 .slick-slide {
-    display: none;
     float: left;
     height: 100%;
     min-height: 1px;
-}
-
-    [dir='rtl'] .slick-slide {
+    [dir="rtl"] & {
         float: right;
     }
-
-    .slick-slide img {
+    img {
         display: block;
     }
-
-    .slick-slide.slick-loading img {
+    &.slick-loading img {
         display: none;
     }
 
-    .slick-slide.dragging img {
+    display: none;
+
+    &.dragging img {
         pointer-events: none;
     }
 
-    .slick-initialized .slick-slide {
+    .slick-initialized & {
         display: block;
     }
 
-    .slick-loading .slick-slide {
+    .slick-loading & {
         visibility: hidden;
     }
 
-    .slick-vertical .slick-slide {
+    .slick-vertical & {
         display: block;
         height: auto;
         border: 1px solid transparent;
     }
-
-
+}
 .slick-arrow.slick-hidden {
     display: none;
 }
-
