--- a/components/playground.html
+++ b/components/playground.html
@@ -6,8 +6,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Poppins:wght@400;500;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
+    <link rel="stylesheet" type="text/css" href="../slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css"/>
+    
     <link href="../style.css" rel="stylesheet">
     <title>Document</title>
 </head>
@@ -43,7 +45,7 @@
             ------------------------------------>
             <ul id="lunch" class="menu-container responsive">
 
-                <!-- Food 1 -->
+                <!-- Breakfast 1 -->
                 <li class="menu-card breakfast1">
                     <div class="hide">
                         <h4 class="price">$9.99</h4>
@@ -112,6 +114,7 @@
                         <button class="btn">Order Now</button>
                     </div>
                 </li>
+
                 <!-- breakfast 8 -->
                 <li class="menu-card breakfast8">
                     <div class="hide">
@@ -122,7 +125,6 @@
                     </div>
                 </li>
             </ul>
-
             
          </section>
 
@@ -149,7 +151,7 @@
 
          <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
          <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+         <script type="text/javascript" src="../slick/slick.js"></script>
           
           <script type="text/javascript">
             $('.responsive').slick({
@@ -157,13 +159,13 @@
                 infinite: true,
                 speed: 300,
                 slidesToShow: 3,
-                slidesToScroll: 3,
+                slidesToScroll: 1,
                 responsive: [
                 {
                     breakpoint: 1024,
                     settings: {
                     slidesToShow: 3,
-                    slidesToScroll: 3,
+                    slidesToScroll: 1,
                     infinite: true,
                     dots: true
                     }
@@ -172,14 +174,17 @@
                     breakpoint: 600,
                     settings: {
                     slidesToShow: 2,
-                    slidesToScroll: 2
+                    slidesToScroll: 1,
+                    dots: false
                     }
                 },
                 {
                     breakpoint: 480,
                     settings: {
                     slidesToShow: 1,
-                    slidesToScroll: 1
+                    slidesToScroll: 1,
+                    dots: false
+
                     }
                 }
                 // You can unslick at a given breakpoint now by adding:
