--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -19,27 +19,27 @@
 .slick-prev,
 .slick-next
 {
-    font-size: 0;
+    font-size: 0px;
     line-height: 0;
+    z-index: 1000;
 
     position: absolute;
     top: 50%;
 
     display: block;
 
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
     padding: 0;
     -webkit-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
-    transform: translate(0, -50%);
+    transform: translateY(-50%);
 
     cursor: pointer;
-
-    color: transparent;
+    color: white;
     border: none;
     outline: none;
-    background: transparent;
+    background: none;
 }
 
 .slick-prev:hover,
@@ -47,7 +47,7 @@
 .slick-next:hover,
 .slick-next:focus
 {
-    color: transparent;
+    opacity: .5;
     outline: none;
     background: transparent;
 }
@@ -68,11 +68,10 @@
 .slick-next:before
 {
     font-family: 'slick';
-    font-size: 20px;
+    font-size: 50px;
     line-height: 1;
-
+    background: none;
     opacity: .75;
-    color: white;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -80,7 +79,8 @@
 
 .slick-prev
 {
-    left: -25px;
+    left: 0px;
+    ;
 }
 [dir='rtl'] .slick-prev
 {
@@ -98,7 +98,7 @@
 
 .slick-next
 {
-    right: -25px;
+    right: 0px;
 }
 [dir='rtl'] .slick-next
 {
@@ -193,7 +193,7 @@
     text-align: center;
 
     opacity: .25;
-    color: black;
+    color: #ff8800;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -201,5 +201,5 @@
 .slick-dots li.slick-active button:before
 {
     opacity: .75;
-    color: black;
+    color: #ff8800;
 }
