--- a/style.css
+++ b/style.css
@@ -1036,6 +1036,34 @@ h1 {
     margin-top: 3rem;
 }
 
+/**********************************
+Media QUERIES
+**********************************/
+@media (max-width: 480px) {
+    .specialty-container {
+        padding: 6rem 3rem;
+        text-align: center;
+        height: 100rem;
+    }
+
+    .menu-card {
+        width: 100%;
+        height: 30rem;
+        background-size: cover;
+
+    }
+
+    .slick-prev,
+    .slick-next {
+        top: 60%;
+        transform: translateY(-60%);
+    }
+}
+
+
+
+
+
 
 /******************************************
 BREAKFAST
